force-app/main/default/objects/Lead/fields/Interested_in_New_Car__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_New_Car__c</fullName>
    <label>Interested in New Car</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>