force-app/main/default/objects/Lead/fields/Lead_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lead_Flag__c</fullName>
    <label>Lead Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>inspection report</fullName>
            </value>
            <value>
                <fullName>uc_testdrive</fullName>
            </value>
            <value>
                <fullName>getseller</fullName>
            </value>
            <value>
                <fullName>quickloan</fullName>
            </value>
            <value>
                <fullName>PaymentFailed</fullName>
            </value>
            <value>
                <fullName>non_ico_journey_completed</fullName>
            </value>
            <value>
                <fullName>ico_journey_pending</fullName>
            </value>
            <value>
                <fullName>non_ico_journey_completed_user_dropped</fullName>
            </value>
            <value>
                <fullName>ico_journey_pending_user_dropped</fullName>
            </value>
            <value>
                <fullName>ico_journey_completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>