force-app/main/default/objects/Lead/fields/Missing_Part__c.field-meta.xml
<CustomField>
    <fullName>Missing_Part__c</fullName>
    <label>Missing Part</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>