force-app/main/default/objects/Lead/fields/Missing_Part_Details__c.field-meta.xml
<CustomField>
    <fullName>Missing_Part_Details__c</fullName>
    <label>Missing Part Details</label>
    <length>225</length>
    <type>Text</type>
</CustomField>