force-app/main/default/objects/Lead/fields/Running_Condition__c.field-meta.xml
<CustomField>
    <fullName>Running_Condition__c</fullName>
    <label>Running Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>