force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#FF9900</color>
                <label>Open</label>
            </value>
            <value>
                <fullName>Valuator to be assigned</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
                <color>#FF6666</color>
                <label>No response</label>
            </value>
            <value>
                <fullName>Switched Off Not Reachable</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <label>Wrong number</label>
            </value>
            <value>
                <fullName>Language Issue</fullName>
            </value>
            <value>
                <fullName>Already Evaluated</fullName>
            </value>
            <value>
                <fullName>Location Not Serviceable</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Buy in Future</fullName>
            </value>
            <value>
                <fullName>Buy lead</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Dispute at dealership</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Evaluated</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
                <color>#6666CC</color>
                <label>Finalised</label>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Interested in CV</fullName>
            </value>
            <value>
                <fullName>Interested in New Car</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Live completed</fullName>
            </value>
            <value>
                <fullName>Live deal closure</fullName>
            </value>
            <value>
                <fullName>Live follow-up</fullName>
            </value>
            <value>
                <fullName>Live rejected</fullName>
            </value>
            <value>
                <fullName>Live soldout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>