force-app/main/default/objects/Lead/recordTypes/Buyer_Used_Car.recordType-meta.xml
<RecordType>
    <fullName>Buyer_Used_Car</fullName>
    <active>true</active>
    <businessProcess>Buyer Used Car Lead Process</businessProcess>
    <label>Buyer Used Car</label>
</RecordType>