force-app/main/default/objects/Lead/recordTypes/ELV.recordType-meta.xml
<RecordType>
    <fullName>ELV</fullName>
    <active>true</active>
    <businessProcess>ELV Lead Process</businessProcess>
    <label>ELV</label>
</RecordType>