force-app/main/default/objects/Lead/validationRules/ValidationOnStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Sold&quot;),
NOT(ISPICKVAL(Status__c, &quot;Sold&quot;))
)</errorConditionFormula>
    <errorMessage>You do not have access to change the status value when it is Sold</errorMessage>
</ValidationRule>